[tool.poetry]
name = "shallow-backup-fork"
version = "0.1.0"
description = ""
authors = ["Tim Coutinho <tmcoutinho42@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
click = "7.0"
colorama = "0.4.3"
GitPython = "3.1.0"
inquirer = "2.6.3"

[tool.poetry.dev-dependencies]
pytest = "5.4.1"
pytest-cov = "2.8.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
